# text-cleaner

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-30-portable-text-cleaner-implementation.md
docs/superpowers/specs/: 2026-04-30-portable-text-cleaner-design.md
examples/: profiles.toml
packaging/: run.cmd  run.command
scripts/: build_pyz.py  email_windows_zip.py  package_windows_zip.py  release_github.py
src/text_cleaner/: __main__.py  cli.py  clipboard.py  engine.py  logging_setup.py  operations.py  portable.py  profiles.py  tui.py
tests/: test_build_pyz.py  test_cli_smoke.py  test_clipboard.py  test_email_windows_zip.py  test_engine.py  test_operations.py  test_package_windows_zip.py  test_portable_logging.py  test_profile_repository.py  test_profiles.py  test_release_github.py  test_tui_services.py
