[project]
name = "text-cleaner"
version = "0.1.1"
description = "Portable TUI text cleaner with saved profiles"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "emoji>=2.11.0",
  "pyperclip>=1.8.2",
  "textual>=0.85.0",
  "tomli-w>=1.0.0",
]

[project.scripts]
text-cleaner = "text_cleaner.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.4.0",
  "shiv>=1.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/text_cleaner"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
